Fixed the white space on sides!

--- a/styles/style.css
+++ b/styles/style.css
@@ -7,10 +7,14 @@ Green: #00B172
 White: #FFF
 } */
 
-
+html{
+    width:100%;
+}
 body{
     color: #1A1A1A;
     font-family: Arial, Helvetica, sans-serif;
+    margin:0;
+
 }
 
 #main{
@@ -18,7 +22,7 @@ body{
     background-position: center;
     background-repeat: none;
     background-size: cover;
-    margin: 75px auto 0px auto;
+    margin: 94px auto 0px auto;
     color:#FFF;
     width: 100%;
     height:800px;
